sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: '(' expected but identifier found.
      if getValeur(getValeur(j)<n){
         ^AlgSelectionSort:9: error: illegal start of simple expression
    }
    ^