sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for(i<- 0 to getNombreValeur()-1){
    var n=i
    for(j<- i+1 to getNombreValeurs()-1){
      if getValeur(getValeur(j)<n){
        n=getValeur(j)
      }
    }
    echange(i,n)
  }
}